# gd32vf103-pac

./: .gitignore  Cargo.toml  GD32VF103.svd  GD32VF103.svd.clustered  README.md  device.x  librs-patch  update.sh
.github/workflows/: ci.yml
patches/: gd32vf103.yaml
src/: adc0.rs  adc1.rs  afio.rs  bkp.rs  can0.rs  crc.rs  ctimer.rs  dac.rs  dbg.rs  dma0.rs  dma1.rs  eclic.rs  exmc.rs  exti.rs  fmc.rs  fwdgt.rs  gpioa.rs  i2c0.rs  interrupt.rs  lib.rs  pmu.rs  rcu.rs  rtc.rs  spi0.rs  timer0.rs  timer1.rs  timer5.rs  uart3.rs  usart0.rs  usbfs_device.rs  usbfs_global.rs  usbfs_host.rs  usbfs_pwrclk.rs  wwdgt.rs
src/adc0/: ctl0.rs  ctl1.rs  idata0.rs  idata1.rs  idata2.rs  idata3.rs  ioff0.rs  ioff1.rs  ioff3.rs  ovsampctl.rs  rdata.rs  rsq0.rs  rsq2.rs  sampt0.rs  stat.rs  wdht.rs  wdlt.rs
src/adc1/: ctl0.rs  ctl1.rs  idata0.rs  idata1.rs  idata2.rs  ioff0.rs  ioff2.rs  ioff3.rs  isq.rs  rdata.rs  rsq0.rs  rsq1.rs  rsq2.rs  sampt0.rs  sampt1.rs  stat.rs  wdht.rs
src/afio/: ec.rs  extiss0.rs  extiss1.rs  extiss2.rs  extiss3.rs  pcf0.rs  pcf1.rs
src/bkp/: data0.rs  data1.rs  data10.rs  data11.rs  data12.rs  data13.rs  data14.rs  data15.rs  data16.rs  data17.rs  data18.rs  data19.rs  data2.rs  data20.rs  data21.rs  data22.rs  data23.rs  data24.rs  data25.rs  data26.rs  data27.rs  data28.rs  data29.rs  data3.rs  data30.rs  data31.rs  data32.rs  data33.rs  data34.rs  data35.rs  data36.rs  data37.rs  data38.rs  data39.rs  data4.rs  data40.rs  data41.rs  data5.rs  data6.rs  data7.rs  (+5 more)
src/can0/: bt.rs  ctl.rs  err.rs  f0data0.rs  f0data1.rs  f10data0.rs  f10data1.rs  f11data0.rs  f11data1.rs  f12data0.rs  f12data1.rs  f13data0.rs  f13data1.rs  f14data0.rs  f14data1.rs  f15data0.rs  f15data1.rs  f16data0.rs  f16data1.rs  (+70 more)
(+656 files in other folders)
