[package]
name = "gd32vf103-pac"
version = "0.3.1"
authors = ["The RISC-V Team <risc-v@teams.rust-embedded.org>"]
repository = "https://github.com/riscv-rust/gd32vf103-pac"
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for GD32VF103 chips"
keywords = ["riscv", "gd32", "register", "peripheral"]
license = "ISC"
edition = "2018"

[dependencies]
bare-metal = "0.2.4"
riscv = "0.6.0"
riscv-rt = { version = "0.8.0", optional = true }
vcell = "0.1.2"

[features]
rt = ["riscv-rt"]
